# pytest-adaptavist

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  pytest_adaptavist.py  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
pytest_adaptavist/: __init__.py  _atm_configuration.py  _helpers.py  _pytest_adaptavist.py  _xdist.py  constants.py  helpers.py  metablock.py  pytest_adaptavist.py  types.py
tests/: README.md  __init__.py  conftest.py  testA.py  test_A.py  test_adaptavist.py  test_atm_configuration.py  test_case_template.csv  test_cli.py  test_decorators.py  test_helpers.py  test_ini.py  test_ini_py  test_init.py  test_metablock.py  test_pytest_adaptavist.py  test_xdist.py
tests/system_tests/: test_a.py
tests/unit_tests/: conftest.py  test_init.py  test_metablock.py  test_pytest_adaptavist.py
