[black]


[flake8]
max-line-length = 160
ignore = W503
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[isort]
filter_files = True
ignore_whitespace = True
line_length = 160
multi_line_output = 1
order_by_type = True

[metadata]
license = MIT
license_file = LICENSE.md
long_description = file: README.md

[mypy]
ignore_missing_imports = True
